# ml-audio-classification

./: .env.example  .env.template  .gitignore  CLAUDE.md  CLAUDE_COMPLIANCE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
k8s/: 01-namespace-config.yaml  02-deployment.yaml  03-experiment-job.yaml  03-jobs.yaml  04-service.yaml  deploy-complete.sh  launch-experiment.sh  setup-gke.sh  setup-secrets.sh  test-image.sh
scripts/: deploy-k8s.sh  entrypoint.sh  quick-start-demo.sh  setup-config.sh  setup-dev.sh  setup-docker.sh
src/ml_audio_classification/: __init__.py  __main__.py  cli.py  config.py
src/ml_audio_classification/core/: __init__.py  exceptions.py  logging.py  reproducibility.py  validation.py
src/ml_audio_classification/data/: __init__.py  audio_preprocessor.py  dataset_manager.py  gcs_client.py
src/ml_audio_classification/experiments/: __init__.py  experiment_runner.py  experiment_scheduler.py  visualization.py
src/ml_audio_classification/models/: __init__.py  base_model.py  deep_learning_models.py  model_factory.py  specialized_models.py
tests/: __init__.py  test_audio_preprocessor.py  test_config.py  test_experiment_runner.py
